tests/ui/impl-trait/method/method-resolution2.next.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/method-resolution2.rs:25:11
   |
LL |         x.bar();
   |           ^^^ multiple `bar` found
   |
note: candidate #1 is defined in an impl for the type `Bar<T>`
  --> $DIR/method-resolution2.rs:19:5
   |
LL |     fn bar(self) {}
   |     ^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `Bar<u32>`
  --> $DIR/method-resolution2.rs:15:5
   |
LL |     fn bar(self) {}
   |     ^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0034`.
